--- a/patient/patient_login_page.css
+++ b/patient/patient_login_page.css
@@ -1,9 +1,4 @@
-.no-border {
-    border: 0;
-    box-shadow: none;
-}
-
-input:focus{
+#floatingInputGroup1:focus{
     box-shadow: none;
 }
 
@@ -13,10 +8,10 @@ a{
 }
 
 .background { 
-    position: static; 
+    position: absolute; 
     height: 100vh; 
     width: 100vw; 
-    background-image: url('assets/11116016_415.jpg'); 
+    background-image: url('../assets/11116016_415.jpg'); 
     background-size: cover; 
     background-position: center; 
     filter: blur(5px);
@@ -27,4 +22,12 @@ a{
 footer {
     position: fixed;
     bottom: 50px;
+}
+
+.input-bg{
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.btn:hover{
+    background-color: #e3e3e3;
 }
