--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
 /* Select Role Screen Css */
 :root{
-    --primary: #10bce9
+    --primary:#10bce9
 }
 
 html,body{height:100%;}
+
+.btn-primary{
+    background-color: var(--primary);
+    border: 0px solid white;
+}
+
+.btn:focus{
+    box-shadow: none;
+}
+
+.btn:active{
+    box-shadow: none;
+}
 
 .patient-div{
     width: 350px;
@@ -86,7 +99,7 @@ html,body{height:100%;}
 
 .submit-request-div{
     height: 50px;
-    background-color: var(--primary);
+    background-color: #10bce9;
     border-radius: 5px;
 }
 
@@ -120,7 +133,7 @@ html,body{height:100%;}
 }
 
 .form-floating:focus-within label{
-    color: var(--primary);
+    color: #10bce9;
 }
 
 .create-patient-request{
@@ -143,4 +156,36 @@ html,body{height:100%;}
 
 .iti__country-list {
     z-index: 5;
+}
+
+.upload-border{
+    border:1px solid black;
+    width:315px;
+}
+input[type=file]::-webkit-file-upload-button {
+    width: 0;
+    padding: 0;
+    margin: 0;
+    -webkit-appearance: none;
+    border: none;
+    border:0px;
+}
+
+ x::-webkit-file-upload-button, input[type=file]:after {
+    content:'Browse...';
+    left: 100%;
+    margin-left:3px;
+    position: relative;
+    -webkit-appearance: button;
+    padding: 3px 8px 2px;
+    border:0px;
+}
+
+.info-icon-shadow{
+    box-shadow: 0px 0px 1px 2px #faaa04;
+    border-radius: 100%;
+}
+
+.dark-mode{
+    background-color: black;
 }
